--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -265,7 +265,7 @@ a:focus {
 
 #map {
     width: 100%;
-    height: 200px;
+    height: 500px !important;
     margin-top: 100px;
 }
 
@@ -279,7 +279,7 @@ a:focus {
     }
 
     #map {
-        height: 400px;
+        height: 500;
         margin-top: 250px;
     }
 }
