--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -311,6 +311,14 @@ ul.banner-social-buttons {
     margin-top: 0;
 }
 
+ul.banner-social-buttons {
+    margin: auto auto;
+}
+
+ul.banner-social-buttons li {
+    margin: auto auto;
+}
+
 @media(max-width:1199px) {
     ul.banner-social-buttons {
         margin-top: 15px;
