--- a/css/timeliner-future.css
+++ b/css/timeliner-future.css
@@ -289,14 +289,14 @@
 .timeline-event-content .media {
   float: right;
   padding: 0 0 12px;
-  width: 300px;
+  width: 35%;
 }
 .timeline-event-content .media img {
   border: 2px solid rgba(255, 255, 255, 0.85);
-  border-radius: 100px;
-  height: 200px;
+  border-radius: 15px;
+  height: 250px;
   margin: 0;
-  width: 200px;
+  width: 250px;
 }
 .timeline-event-content .media p {
   clear: both;
