--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -16,6 +16,12 @@ html {
     width: 100%;
     height: 100%;
 }
+#about {
+    padding-top: 100px;
+}
+#journey {
+    margin-bottom: 350px;
+}
 
 h1,
 h2,
