--- a/css/trainhackers.css
+++ b/css/trainhackers.css
@@ -13,8 +13,7 @@ h1, h2, h3, h4, h5, h6 {
   text-decoration: none;
   font-weight: 500;
   font-family: Ubuntu;
-  padding: 0;
-  margin: 0; }
+}
 
 a {
   text-decoration: none;
@@ -32,14 +31,19 @@ h1.general {
 
 .fluid-container {
   width: 100%;
-  padding-bottom: 100px;
-  padding-top: 100px; }
+  padding: 50px 50px 50px 50px; 
+}
 ul {
   padding-right: 50px;
 }
 
+.content-area {
+  padding: 0px 30px 0px 0px;
+}
+
 .aboutSection {
   padding-top: 80px;
+  padding-bottom: 200px;
   color: #fff; }
   .aboutSection .logo {
     text-align: center; }
@@ -102,7 +106,10 @@ ul {
     margin-left: 40px;
     opacity: 1; }
 
-
+.section-title {
+  text-align: center;
+  font-size: 100px;
+}
 
 .faqSection {
   -webkit-box-shadow:0 0 30px white; 
@@ -114,7 +121,9 @@ ul {
   margin: auto auto;
   background: url('../img/trainhackers/1.png') center center;
   background-color: white;
-  background-size: cover; }
+  background-size: cover; 
+  margin-bottom: 200px;
+}
 
 .contactSection {
   color: #fff;
@@ -154,6 +163,7 @@ ul {
 p {
   width: 90%;
   margin: auto auto; 
+  position: relative;
 }
 
 .clear {
