--- a/css/trainhackers.css
+++ b/css/trainhackers.css
@@ -167,13 +167,14 @@ p {
   clear: both; }
 
 #particles-js {
-  background: #0D0D0D;
+  background: #000033;
   position: fixed;
   z-index: -1;
   width: 100%;
   height: 100%;
   top: 0;
-  left: 0; }
+  left: 0; 
+}
 
 
 
