--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,12 @@
+body {
+  overflow-x: hidden
+}
 .container-wide {
   width: 99%;
 }
 
 #about {
     padding-top: 100px;
-}
-#journey {
-    margin-bottom: 350px;
 }
 #timeline {
   margin-top: -300px;
@@ -93,3 +93,44 @@
     display: table; }
   .team:after {
     clear: both; }
+
+
+
+  /* WINNERS */
+
+    .clear {
+        clear: both;
+    }
+    .prize-header-container {
+        position: relative;
+        height: 500px; 
+        width: 100%;
+        z-index: 0;
+        padding: 100px 0px 50px 0px;
+        overflow: hidden;
+    }
+    .prize-header-text {
+        width: 100%;
+        height: 100%;
+        vertical-align: bottom;
+        text-align: center;
+        color: black;
+        font-size: 12em;
+    }
+    .prize-header-img {
+        height: 100%;
+        width: 100%;
+        background-image: url(../img/2015/hacktrain-2015-winners.jpg); 
+        background-size: 100%; 
+        background-position: 100% 20%;
+        filter: blur(3px);
+        -webkit-filter: blur(3px);
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+        z-index: -1;
+    }
+    .prize-description {
+        padding:  40px 40px 40px 40px;
+        text-align: left;
+    }
