--- a/css/index.css
+++ b/css/index.css
@@ -104,7 +104,6 @@ body {
     .prize-header-container {
         position: relative;
         height: 500px; 
-        width: 100%;
         z-index: 0;
         padding: 100px 0px 50px 0px;
         overflow: hidden;
@@ -121,16 +120,14 @@ body {
         height: 100%;
         width: 100%;
         background-image: url(../img/2015/hacktrain-2015-winners.jpg); 
-        background-size: 100%; 
+        background-size: cover; 
         background-position: 100% 20%;
         filter: blur(3px);
-        -webkit-filter: blur(3px);
         position: absolute;
         top: 0px;
         bottom: 0px;
         z-index: -1;
     }
     .prize-description {
-        padding:  40px 40px 40px 40px;
-        text-align: left;
+        text-align: center;
     }
