--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,11 @@ body {
 
   /* WINNERS */
 
+    #winners {
+        background-color: rgba(0,0,0,.5);
+        width: 100%;
+        height: 100%;
+    }
     .clear {
         clear: both;
     }
