--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,12 @@ body {
 	display: none;
 }
 
+#typeform-full {
+  display: none;
+  width: 100%;
+  height: 600px;
+}
+
 #gadgets .img-responsive {
   max-height: 150px;
   margin-top: 100px;
