--- a/css/index.css
+++ b/css/index.css
@@ -268,3 +268,10 @@ section[name="prizes"] p.desc {
 #sponsor .img-container {
   height: 200px;
 }
+
+#speakers .speaker-description {
+  text-align: left;
+}
+
+
+
