--- a/css/index.css
+++ b/css/index.css
@@ -274,10 +274,11 @@ html {
 
 
   body {
-    font-family: Ubuntu;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   }
   section {
     clear: both;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
   }
   #schedule {
     margin-bottom: 100px;
